readded tailwind and added nav capabilities and styling

--- a/test-app/src/app/app.component.html
+++ b/test-app/src/app/app.component.html
@@ -1,5 +1,12 @@
 <div>
-  <h1>Angular Playground</h1>
+  <h1 class="text-3xl font-bold underline">
+    <div>
+      Angular Playground
+    </div>
+    <div>
+      Hello world!
+    </div>
+  </h1>
   <nav>
     <a routerLink="/home" routerLinkActive="active">Home</a>
   </nav>
