--- a/test-app/src/app/home/home.component.html
+++ b/test-app/src/app/home/home.component.html
@@ -1,1 +1,7 @@
-<p>home works!</p>
+<div>
+    <p>home works!</p>
+    <nav>
+        <a routerLink="../" routerLinkActive="active">Back</a>
+    </nav>
+</div>
+<router-outlet></router-outlet>
